--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="100dp"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:textColor="#FF9900"/>
     </LinearLayout>
 
     <com.example.sunhq.a2048.GridViewGame
