--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@mipmap/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,11 +12,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp">
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/score"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:textColor="#000"/>
 
         <TextView
             android:id="@+id/tvScore"
@@ -24,6 +27,8 @@
             android:layout_marginLeft="100dp"
             android:textSize="30dp"
             android:textColor="#FF9900"/>
+
+
     </LinearLayout>
 
     <com.example.sunhq.a2048.GridViewGame
